Add handling of computer code and other preformatted text: * Don't hyphenate code. * Preserve whitespace if space="preserve" is specified.

--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -46,3 +46,12 @@ doctitle, docauthor {
 	margin-top: 2;
 	margin-bottom: 2;
 }
+
+code {
+	display: block;
+	hyphens: none;
+}
+
+*[space=preserve] {
+	white-space: pre-wrap;
+}
