--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -1,3 +1,5 @@
+@namespace xml "http://www.w3.org/XML/1998/namespace";
+
 @page {
 	size: 35 28;
 	@top-center {
@@ -51,6 +53,6 @@ code {
 	hyphens: none;
 }
 
-[space=preserve] {
+[xml|space=preserve] {
 	white-space: pre-wrap;
 }
