Page numbers should be rendered in the top margin. Print page transitions in the middle of a braille page should be rendered on their own line.

--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -6,10 +6,12 @@
 	@top-right {
 		content: counter(page);
 	}
+	margin-left: 2;
 }
 
 pagenum {
-	display: none;
+	display: block;
+	text-align: center;
 	string-set: print-page content();
 }
 
