--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -1,7 +1,7 @@
 @page {
 	size: 35 28;
 	@top-center {
-		content: string(print-page-from, page-first) string(print-page-to, page-last-except-start);
+		content: string(print-page-from, page-start) string(print-page-to, page-last-except-start);
 	}
 	@top-right {
 		content: counter(page);
