--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -77,6 +77,7 @@ book {
  */
 @volume {
 	@begin {
+		/* This named flow is defined by the system default CSS. */
 		content: flow(volume-toc);
 	}
 }
