Temporarily disable hyphenation.

--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -34,7 +34,8 @@ head {
  * See also the code rule.
  */
 book {
-	hyphens: auto;
+	/* !FIXME: re-enable on release! */
+	/* hyphens: auto; */
 }
 
 /* --------------------------------------------------------------------------------
