--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -1,4 +1,4 @@
-/**********************************************************************************
+﻿/**********************************************************************************
  * Dedicon Default CSS
  * http://www.dedicon.nl/
  *
