dedicon:dtbook-to-pef: Pre-process the document to add generated content. This allows said content to be externally styled with CSS.

--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -146,6 +146,7 @@ p {
  */
 #generated-title-page {
 	flow: title-page;
+	page-break-inside: avoid;
  }
 
 /* --------------------------------------------------------------------------------
