--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -108,7 +108,7 @@ level4, level5, level6,
 frontmatter, bodymatter, rearmatter {
 	display: block;
 	page-break-before: always;
-	page-break-after: always;
+	/* page-break-after: always; */
 }
 
 /* --------------------------------------------------------------------------------
