--- a/src/main/resources/css/dedicon-default.css
+++ b/src/main/resources/css/dedicon-default.css
@@ -96,6 +96,16 @@ pagenum {
 	/* The following line sets the values used for the top-center position and the TOC. */
 	string-set: print-page-from content(), print-page-to ' - ' content();
 }
+/* HACK: don't show pagenums if they are the first thing on the page. */
+level > pagenum:first-child,
+level1 > pagenum:first-child,
+level2 > pagenum:first-child,
+level3 > pagenum:first-child,
+level4 > pagenum:first-child,
+level5 > pagenum:first-child,
+level6 > pagenum:first-child {
+	display: none;
+}
 
 /* --------------------------------------------------------------------------------
  * Sections (levels)
