--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -134,7 +134,7 @@ frontmatter:not(:has(> *:not(doctitle, docauthor, #generated-title-page))) {
 /* --------------------------------------------------------------------------------
  * Levels (sections)
  *
- * Each section starts on a new page.
+ * Each level starts on a new page.
  */
 level,
 level1, level2, level3,
