--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -41,7 +41,7 @@ $show-print-page-numbers: true !default;
 @if $show-print-page-numbers {
 	@page {
 		@top-center {
-			content: string(print-page-from, page-start) string(print-page-to, page-last-except-start);
+			content: string(print-page-from, page-start-except-last) string(print-page-to, page-last);
 		}
 	}
 }
@@ -106,7 +106,7 @@ pagenum {
 	margin-bottom: 1;
 	text-align: center;
 	/* The following line sets the values used for the top-center position and the TOC. */
-	string-set: print-page-from content(), print-page-to ' - ' content();
+	string-set: print-page-from content() ' - ', print-page-to content();
 }
 /* HACK: don't show pagenums if they are the first thing on the page. */
 level > pagenum:first-child,
@@ -227,7 +227,7 @@ list > li {
 #generated-volume-toc li > a::after {
 	/* The next line prevents whitespace from being collapsed. */
 	white-space: pre-wrap;
-	content: '  ' target-string(attr(href), print-page-from) '  ' target-counter(attr(href), page);
+	content: '  ' target-string(attr(href), print-page-to) '  ' target-counter(attr(href), page);
 }
 #generated-volume-toc li > a {
 	display: block;
