--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -105,7 +105,7 @@ pagenum {
 	margin-top: 1;
 	margin-bottom: 1;
 	text-align: center;
-	/* The following line sets the values used for the top-center position and the TOC. */
+	/* The following line sets the values used for the top-center page position and the TOC. */
 	string-set: print-page-from content() ' - ', print-page-to content();
 }
 /* HACK: don't show pagenums if they are the first thing on the page. */
@@ -122,11 +122,15 @@ level6 > pagenum:first-child {
 /* --------------------------------------------------------------------------------
  * Front matter, body matter and rear matter
  *
+ * The print page number is reset on the start of these elements.
+ *
  * If any of these consist of only content that is not rendered,
  * then that element as a whole is not rendered.
  */
 frontmatter, bodymatter, rearmatter {
 	display: block;
+	/* The following line sets the values used for the top-center page position and the TOC. */
+	string-set: print-page-from '', print-page-to '';
 }
 frontmatter:not(:has(> *:not(doctitle, docauthor, #generated-title-page))) {
 	display: none;
