--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -29,7 +29,7 @@ $show-print-page-numbers: true !default;
  *
  * A page contains 33 columns by 28 rows of braille (configurable with options, defaults in script).
  *
- * The print page number is shown in the top-center.
+ * For SV books, the print page number is shown in the top-center.
  * If a braille page contains content from multiple print pages,
  * the print page number is a range "from - to".
  * If no print page number is available, this part of the braille page is left blank.
@@ -66,17 +66,6 @@ $show-print-page-numbers: true !default;
 }
 
 /* --------------------------------------------------------------------------------
- * Hyphenation
- *
- * Everything except code is hyphenated.
- *
- * See also the code rule.
- */
-book {
-	hyphens: auto;
-}
-
-/* --------------------------------------------------------------------------------
  * Hidden elements
  *
  * These are not directly incldued in the output.
@@ -94,29 +83,38 @@ head, doctitle, docauthor {
 /* --------------------------------------------------------------------------------
  * Print page numbers
  *
- * If there is a print page change somewhere on the braille page,
+ * For SV books, if there is a print page change somewhere on the braille page,
  * the new print page number is shown on its own line, horizontally centered,
  * with a blank line before and after it.
  *
  * See also the @page rule.
  */
 pagenum {
-	display: block;
-	margin-top: 1;
-	margin-bottom: 1;
-	text-align: center;
 	/* The following line sets the values used for the top-center page position and the TOC. */
 	string-set: print-page-from content() ' - ', print-page-to content();
 }
-/* HACK: don't show pagenums if they are the first thing on the page. */
-level > pagenum:first-child,
-level1 > pagenum:first-child,
-level2 > pagenum:first-child,
-level3 > pagenum:first-child,
-level4 > pagenum:first-child,
-level5 > pagenum:first-child,
-level6 > pagenum:first-child {
-	display: none;
+@if $show-print-page-numbers {
+	pagenum {
+		display: block;
+		margin-top: 1;
+		margin-bottom: 1;
+		text-align: center;
+	}
+	/* HACK: don't show pagenums if they are the first thing on the page. */
+	level > pagenum:first-child,
+	level1 > pagenum:first-child,
+	level2 > pagenum:first-child,
+	level3 > pagenum:first-child,
+	level4 > pagenum:first-child,
+	level5 > pagenum:first-child,
+	level6 > pagenum:first-child {
+		display: none;
+	}
+} /* $show-print-page-numbers */
+@else {
+	pagenum {
+		display: none;
+	}
 }
 
 /* --------------------------------------------------------------------------------
