Add <br> to default CSS; don't set default values for variables (this is done in dtbook-to-pef).

--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -9,13 +9,6 @@
  */
 
 /**********************************************************************************
- * Variables
- */
-
-$show-braille-page-numbers: true !default;
-$show-print-page-numbers: true !default;
-
-/**********************************************************************************
  * General rules
  */
 
@@ -391,6 +384,14 @@ code {
 /**********************************************************************************
  * Inline elements
  */
+
+/* --------------------------------------------------------------------------------
+ * Line breaks
+ */
+br::before {
+	white-space: pre-line;
+	content: '\A';
+}
  
 /* --------------------------------------------------------------------------------
  * Current volume number
